--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,6 @@
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
 spring.datasource.url=jdbc:mariadb://localhost:3306/employees
 spring.datasource.username=employees
 spring.datasource.password=employees
